--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="10">
         <tr> 
-            <th><img src="C:\\Users\\kosta\\Downloads\\1654710038721-modified.png" width="150" heigth="100" alt="Konstantinos profile picture"></th>
+            <th><img src="1654710038721-modified.png" width="150" heigth="100" alt="Konstantinos profile picture"></th>
             <td><h1>Konstantinos Katharakis</h1>
             <p><em>Undergraduate Economics Student</em></p>
             <p>I am a Data analyst and web developer. I ❤️ Economics</p></td>
